prepare for release 1.3.0 and fix spelling, deprecations, etc.